--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,8 +1,34 @@
-$primary-color-dark: #5f3dc4;
-$primary-color-light: #e5dbff;
+$primary-color-darker: #0B0F1E;
+$primary-color-dark: #131B35;
+$primary-color-light: #2d3f7c;
 
-$font-size-xs: 1.1rem;
-$font-size-sm: 1.4rem;
+$secondary-color-pink-1: #e3c0d3;
+$secondary-color-pink-2: #f1dfe9;
+
+$secondary-color-dull-1: #151e3b;
+$secondary-color-dull-2: #252e4b;
+
+$tertiary-color-purple-1: #1d2152;
+
+$text-color-dark-1: #172141;
+$text-color-light-1: #c0cae8;
+$text-color-light-2: #eaedf7;
+
+$active-color: #8dd9cc;
+$inactive-color: #2d3f7c;
+$warning-color: #e07575;
+
+$font-size-xs: 1rem;
+$font-size-sm: 1.2rem;
 $font-size-default: 1.6rem;
 $font-size-lg: 2.1rem;
-$font-size-xl: 2.8rem;
+$font-size-xl: 3rem;
+$font-size-2xl: 3.6rem;
+$font-size-3xl: 4.8rem;
+
+$zindex-back: 0;
+$zindex-mid: 1000;
+$zindex-front: 1100;
+$zindex-front-above: 1110;
+$zindex-backdrop: 1200;
+$zindex-modal: 1300;
