--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/" as a;
+
 *,
 *::after,
 *::before {
@@ -12,4 +14,5 @@ html {
 
 body {
   box-sizing: border-box;
+  background-color: a.$primary-color-dark;
 }
