--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,18 +1,25 @@
 @use "../abstracts" as a;
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300&display=swap");
 
-body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: a.$primary-color-dark;
+@font-face {
+  font-family: "SweetHipster";
+  src: url("../../assets/fonts/SweetHipster-PzlE.ttf");
 }
 
-.heading-primary {
-  font-size: a.$font-size-xl;
+body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: a.$text-color-light-1;
+}
+
+.heading-title {
+  font-family: "SweetHipster";
+  color: a.$secondary-color-pink-1;
+  font-size: 22rem;
 }
 
 .paragraph {
-  font-size: a.$font-size-sm;
+  font-size: a.$font-size-default;
 }
