--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -1,4 +1,35 @@
+@use "../abstracts/" as a;
+
+.u-center-text {
+  text-align: center;
+}
+
+.u-mt-1 {
+  margin-top: 1rem;
+}
+
+.u-mt-2 {
+  margin-top: 2rem;
+}
+
+.u-mt-3 {
+  margin-top: 3rem;
+}
+
+.u-mt-4 {
+  margin-top: 4rem;
+}
+
+.u-mt-5 {
+  margin-top: 5rem;
+}
 
 .u-drop-shadow {
   filter: drop-shadow(0 0.3rem 1.3rem rgba(#000, 0.12));
+}
+
+.u-z {
+  &-front-above {
+    z-index: a.$zindex-front-above;
+  }
 }
