--- a/src/styles/layout/_index.scss
+++ b/src/styles/layout/_index.scss
@@ -1,1 +1,6 @@
+@forward "./cta";
+@forward "./event-details";
+@forward "./main-footer";
 @forward "./main-navigation";
+@forward "./quote";
+@forward "./title";
