--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color-darker: #0B0F1E;
-$primary-color-dark: #131B35;
+$primary-color-darker: #0b0f1e;
+$primary-color-dark: #131b35;
 $primary-color-light: #2d3f7c;
 
 $secondary-color-pink-1: #e3c0d3;
@@ -16,7 +16,9 @@ $text-color-light-2: #eaedf7;
 
 $active-color: #8dd9cc;
 $inactive-color: #2d3f7c;
-$warning-color: #e07575;
+// $warning-color: #e07575;
+$warning-color: #f03e3e;
+$success-color: #51cf66;
 
 $font-size-xs: 1rem;
 $font-size-sm: 1.2rem;
