--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -2,7 +2,7 @@
 @use "../base" as b;
 
 .card {
-  height: 30rem;
+  min-height: 25rem;
   width: 40rem;
   background-color: a.$secondary-color-dull-1;
   border-radius: 12px;
@@ -10,14 +10,57 @@
   overflow: hidden;
 
   &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: a.$secondary-color-dull-2;
     text-transform: uppercase;
     height: 7rem;
-    text-align: center;
-    padding-top: 1.2rem;
+
+    padding: 1.2rem 2rem;
   }
 
   &__title {
+    text-align: center;
     font-size: a.$font-size-xl;
+  }
+
+  &__content {
+    padding: 2rem;
+  }
+
+  &__name {
+    font-size: a.$font-size-lg;
+  }
+
+  &__data {
+    font-size: a.$font-size-default;
+  }
+
+  &__overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__close-btn {
+    width: 3.6rem;
+    height: 3.6rem;
+    font-size: 3.6rem;
+    color: a.$active-color;
+    border-style: none;
+    border-radius: 3px;
+    background-color: transparent;
+    cursor: pointer;
+
+    &:hover {
+      background-color: a.$warning-color;
+    }
   }
 }
