--- a/src/styles/components/_loading-spinner.scss
+++ b/src/styles/components/_loading-spinner.scss
@@ -21,7 +21,7 @@
   &__overlay {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.25);
