data edit page added

--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -28,6 +28,31 @@
   margin-top: 5rem;
 }
 
+.u-mt-6 {
+  margin-top: 6rem;
+}
+
+.u-mt-7 {
+  margin-top: 7rem;
+}
+
+.u-mt-8 {
+  margin-top: 8rem;
+}
+
+.u-mt-9 {
+  margin-top: 9rem;
+}
+
+.u-mt-10 {
+  margin-top: 10rem;
+}
+
+.u-my-5 {
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
 .u-drop-shadow {
   filter: drop-shadow(0 0.3rem 1.3rem rgba(#000, 0.12));
 }
