--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -22,4 +22,13 @@
     border-radius: 2rem;
     padding: 0 1rem;
   }
+
+  &__fieldset {
+    padding: 2rem;
+    border-radius: 7px;
+  }
+
+  &__legend {
+    padding: 2rem;
+  }
 }
