--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $inactive-color: #2d3f7c;
 $warning-color: #f03e3e;
 $success-color: #51cf66;
 
+$font-size-2xs: .8rem;
 $font-size-xs: 1rem;
 $font-size-sm: 1.2rem;
 $font-size-default: 1.6rem;
