--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,12 +1,18 @@
+@use "../abstracts/" as a;
+
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(31rem, 1fr));
   grid-auto-rows: auto;
   gap: 2rem;
 
   &__item {
     &--big {
       grid-column: span 2;
+
+      @include a.respond(tab-sm) {
+        grid-column: span 1;
+      }
     }
   }
 }
