--- a/src/styles/components/_loading-spinner.scss
+++ b/src/styles/components/_loading-spinner.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   width: 6.4rem;
   height: 6.4rem;
+  z-index: a.$zindex-modal;
 
   &:after {
     content: " ";
@@ -28,6 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: a.$zindex-backdrop;
   }
 }
 
