--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -2,12 +2,16 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(31rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
   grid-auto-rows: auto;
   gap: 2rem;
 
+  @include a.respond(tab-port) {
+    grid-template-columns: repeat(auto-fill, minmax(32rem, 1fr));
+  }
+
   @include a.respond(mobile-lg) {
-    grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   }
 
   &__item {
