--- a/src/styles/layout/_main-footer.scss
+++ b/src/styles/layout/_main-footer.scss
@@ -2,7 +2,8 @@
 
 .footer {
   position: relative;
-  min-height: 25vh;
+  height: 25vh;
+  min-height: 200px;
   
   &__img {
     position: absolute;
